// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PromoCard > renders correctly with imagePosition right 1`] = `
.c3 {
  display: flex;
}

.c6 {
  display: flex;
}

.c7 {
  position: relative;
  background-color: #ff88c8;
  box-shadow: none;
  color: #292924;
  padding: 0 20px;
  outline: none;
  border-radius: 10000px;
  font-weight: 500;
  cursor: pointer;
  line-height: 100%;
  font-size: 16px;
  opacity: 1;
  width: auto;
  background-color: #dad2c4;
  padding: 0 10px;
  min-width: 54px;
  font-size: 14px;
}

.c7:focus-visible {
  outline: 2px solid #292924;
  outline-offset: 2px;
}

.c7:hover {
  background-color: #beb4a0;
}

.c7:active {
  background-color: #9d927b;
}

.c7 .childrenContainer {
  padding: 9px 0;
}

.c7 span {
  margin: 0 5px 0 0;
}

.c8 {
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
}

.c9 {
  padding: 16px 0;
  flex-grow: 1;
}

.c4 {
  font-size: 20px;
  font-weight: 500;
  line-height: 28px;
  text-align: left;
  color: #292924;
}

.c5 {
  font-size: 16px;
  font-weight: 400;
  line-height: 20px;
  text-align: left;
  color: #292924;
}

.c0 {
  display: flex;
  flex-direction: row-reverse;
  align-items: flex-end;
  gap: 16px;
  padding: 16px;
  background: #f1e9dc;
  border-radius: 24px;
  box-sizing: border-box;
}

.c2 {
  display: flex;
  flex-direction: column;
  gap: 12px;
  flex: 1;
  overflow: hidden;
}

.c1 {
  flex-shrink: 0;
  width: 80px;
  height: 80px;
  display: flex;
  align-items: center;
  justify-content: center;
}

@media (min-width: 0px) {
  .c3 {
    flex-direction: column;
  }
}

@media (min-width: 0px) {
  .c3 {
    gap: 4px;
  }
}

@media (min-width: 0px) {
  .c6 {
    flex-direction: row;
  }
}

@media (min-width: 0px) {
  .c6 {
    gap: 8px;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <span
        data-testid="promo-illustration"
      />
    </div>
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <p
          class="c4"
          cursor="inherit"
          title=""
        >
          Insure your home
        </p>
        <p
          class="c5"
          cursor="inherit"
          title=""
        >
          Add home cover and save £75.
        </p>
      </div>
      <div
        class="c6"
      >
        <button
          class="c7"
        >
          <div
            class="c8"
          >
            <div
              class="c9 childrenContainer"
            >
              Claim discount
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`PromoCard > renders correctly with variant override on primaryButton 1`] = `
.c2 {
  display: flex;
}

.c5 {
  display: flex;
}

.c6 {
  position: relative;
  background-color: #ff88c8;
  box-shadow: none;
  color: #292924;
  padding: 0 20px;
  outline: none;
  border-radius: 10000px;
  font-weight: 500;
  cursor: pointer;
  line-height: 100%;
  font-size: 16px;
  opacity: 1;
  width: auto;
  padding: 0 10px;
  min-width: 54px;
  font-size: 14px;
}

.c6:focus-visible {
  outline: 2px solid #292924;
  outline-offset: 2px;
}

.c6:hover {
  background-color: #f759a9;
}

.c6:active {
  background-color: #e43e93;
}

.c6 .childrenContainer {
  padding: 9px 0;
}

.c6 span {
  margin: 0 5px 0 0;
}

.c9 {
  position: relative;
  background-color: #ff88c8;
  box-shadow: none;
  color: #292924;
  padding: 0 20px;
  outline: none;
  border-radius: 10000px;
  font-weight: 500;
  cursor: pointer;
  line-height: 100%;
  font-size: 16px;
  opacity: 1;
  width: auto;
  background-color: #dad2c4;
  padding: 0 10px;
  min-width: 54px;
  font-size: 14px;
}

.c9:focus-visible {
  outline: 2px solid #292924;
  outline-offset: 2px;
}

.c9:hover {
  background-color: #beb4a0;
}

.c9:active {
  background-color: #9d927b;
}

.c9 .childrenContainer {
  padding: 9px 0;
}

.c9 span {
  margin: 0 5px 0 0;
}

.c7 {
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
}

.c8 {
  padding: 16px 0;
  flex-grow: 1;
}

.c3 {
  font-size: 20px;
  font-weight: 500;
  line-height: 28px;
  text-align: left;
  color: #292924;
}

.c4 {
  font-size: 16px;
  font-weight: 400;
  line-height: 20px;
  text-align: left;
  color: #292924;
}

.c0 {
  display: flex;
  flex-direction: row;
  align-items: flex-end;
  gap: 16px;
  padding: 16px;
  background: #f1e9dc;
  border-radius: 24px;
  box-sizing: border-box;
}

.c1 {
  display: flex;
  flex-direction: column;
  gap: 12px;
  flex: 1;
  overflow: hidden;
}

@media (min-width: 0px) {
  .c2 {
    flex-direction: column;
  }
}

@media (min-width: 0px) {
  .c2 {
    gap: 4px;
  }
}

@media (min-width: 0px) {
  .c5 {
    flex-direction: row;
  }
}

@media (min-width: 0px) {
  .c5 {
    gap: 8px;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <p
          class="c3"
          cursor="inherit"
          title=""
        >
          Insure your home
        </p>
        <p
          class="c4"
          cursor="inherit"
          title=""
        >
          Add home cover and save £75.
        </p>
      </div>
      <div
        class="c5"
      >
        <button
          class="c6"
        >
          <div
            class="c7"
          >
            <div
              class="c8 childrenContainer"
            >
              Claim discount
            </div>
          </div>
        </button>
        <button
          class="c9"
        >
          <div
            class="c7"
          >
            <div
              class="c8 childrenContainer"
            >
              No thanks
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`PromoCard > renders title and body correctly 1`] = `
.c2 {
  display: flex;
}

.c3 {
  font-size: 20px;
  font-weight: 500;
  line-height: 28px;
  text-align: left;
  color: #292924;
}

.c4 {
  font-size: 16px;
  font-weight: 400;
  line-height: 20px;
  text-align: left;
  color: #292924;
}

.c0 {
  display: flex;
  flex-direction: row;
  align-items: flex-end;
  gap: 16px;
  padding: 16px;
  background: #f1e9dc;
  border-radius: 24px;
  box-sizing: border-box;
}

.c1 {
  display: flex;
  flex-direction: column;
  gap: 12px;
  flex: 1;
  overflow: hidden;
}

@media (min-width: 0px) {
  .c2 {
    flex-direction: column;
  }
}

@media (min-width: 0px) {
  .c2 {
    gap: 4px;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <p
          class="c3"
          cursor="inherit"
          title=""
        >
          Insure your home
        </p>
        <p
          class="c4"
          cursor="inherit"
          title=""
        >
          Add home cover and save £75.
        </p>
      </div>
    </div>
  </div>
</div>
`;
